--- a/src/main/resources/static/search.html
+++ b/src/main/resources/static/search.html
@@ -39,16 +39,26 @@
                                        autocomplete="off" class="layui-input">
                             </div>
                         </div>
-                        <!--                        <div class="layui-inline">-->
-                        <!--                            <label class="layui-form-label">试验日期</label>-->
-                        <!--                            <div class="layui-input-inline">-->
-                        <!--                                <input type="text" name="date" id="date" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">-->
-                        <!--                            </div>-->
-                        <!--                            <div class="layui-form-mid">-</div>-->
-                        <!--                            <div class="layui-input-inline">-->
-                        <!--                                <input type="text" name="date1" id="date1" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">-->
-                        <!--                            </div>-->
-                        <!--                        </div>-->
+                        <div class="layui-inline">
+                            <label class="layui-form-label">试验日期</label>
+                            <div class="layui-input-inline" style="width:300px;">
+                                <input type="text" name="date" id="date" placeholder="yyyy-MM-dd HH:mm:ss"  autocomplete="off" class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-inline">
+                            <label class="layui-form-label">试验程度</label>
+                            <div class="layui-input-inline">
+                                <input type="text" name="degree"
+                                       autocomplete="off" class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-inline">
+                            <label class="layui-form-label">试验装置</label>
+                            <div class="layui-input-inline">
+                                <input type="text" name="device"
+                                       autocomplete="off" class="layui-input">
+                            </div>
+                        </div>
                         <div class="layui-inline">
                             <button type="submit" class="layui-btn layui-btn-primary"  lay-submit lay-filter="data-search-btn"><i class="layui-icon"></i> 搜 索</button>
                         </div>
@@ -68,7 +78,7 @@
 </div>
 <script type="text/javascript" src="assets/layui/layui.js"></script>
 <script type="text/javascript" src="assets/config.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script type="text/javascript" src="assets/layui/jquery-3.5.1.min.js"></script>
 <script type="text/javascript" src="assets/layui/jquery.param.js"></script>
 <script>
     layui.use(['form', 'table','laydate'], function () {
@@ -78,23 +88,26 @@
             laydate =layui.laydate;
         //日期
         laydate.render({
-            elem: '#date'
-        });
-        laydate.render({
-            elem: '#date1'
+            elem: '#date',
+            type:'datetime',
+            range:true
         });
         //保存搜索值，返回依然显示搜索后的页面
         function firstRender(){
             var faultName=sessionStorage.getItem("faultName");
             var testType=sessionStorage.getItem("testType");
             var member=sessionStorage.getItem("member");
-            if(faultName||testType||member){
-                tableRender(faultName,testType,member);
+            var data=sessionStorage.getItem("data");
+            var degree=sessionStorage.getItem("degree");
+            var device=sessionStorage.getItem("device");
+
+            if(faultName||testType||member||data||degree||device){
+                tableRender(faultName,testType,member,date,degree,device);
             }
         }
         firstRender();
         //渲染表格
-        function tableRender(faultName,testType,member){
+        function tableRender(faultName,testType,member,date,degree,device){
             var index=layer.msg("查询中，请稍候~",{icon:16,time:false,shade:0})
             table.render({
                 elem: '#currentTableId',
@@ -108,14 +121,17 @@
                 ,where:{
                     faultName:faultName,
                     testType:testType,
-                    member:member
+                    member:member,
+                    date:date,
+                    degree:degree,
+                    device:device
                 }
                 ,parseData: function(res){ //res 即为原始返回的数据
                     return {
                         "code": 0, //解析接口状态
                         "msg": "", //解析提示文本
-                        "count": res.length, //解析数据长度
-                        "data": res //解析数据列表
+                        "count": res.num, //解析数据长度
+                        "data": res.data //解析数据列表
                     };
                 }
                 ,page: { //支持传入 laypage 组件的所有参数（某些参数除外，如：jump/elem） - 详见文档
@@ -126,26 +142,26 @@
                     ,prev: '上一页'
                     ,next: '下一页'
                     ,last: '尾页' //尾页
-                    ,limit:6
-                    ,limits:[6,12,18]
+                    ,limit:50
+                    ,limits:[50,100,500]
                 },
                 cols: [[
                     // {field: 'id', width: 80, title: 'ID', sort: true},
-                    {field: 'faultName', width: 120, title: '试验名称'},
-                    {field: 'testType', width: 120, title: '试验类型'},
-                    {field: 'degree', title: '试验程度', minWidth: 120},
+                    {field: 'faultName', width: 100, title: '试验名称'},
+                    {field: 'testType', width: 100, title: '试验类型'},
+                    {field: 'degree', title: '试验程度', minWidth: 60},
                     {field: 'time',width:120, title: '试验日期',sort: true},
-                    {field: 'device', width: 120, title: '试验装置'},
-                    {field: 'member', width: 120, title: '试验人员'},
-                    {field: 'temperature', width: 120, title: '温度'},
-                    {field: 'stress', width: 120, title: '压力'},
-                    {field: 'flow', width:120, title: '流量'},
-                    {field: 'filename', width:120, title: '文件名称'},
-                    {field: 'path', width:120, title: '文件路劲'},
+                    {field: 'device', width: 100, title: '试验装置'},
+                    {field: 'member', width: 90, title: '试验人员'},
+                    {field: 'temperature', width: 60, title: '温度'},
+                    {field: 'pressure', width: 60, title: '压力'},
+                    {field: 'traffic', width:60, title: '流量'},
+                    {field: 'fileName', width:140, title: '文件名称'},
+                    {field: 'path', width:140, title: '文件路劲'},
                     {title: '操作', width: 120, toolbar: '#currentTableBar', align: "center"}
                 ]],
                 done:function (res) {
-
+                   console.log(1);
                 }
             });
             layer.close(index);
@@ -155,11 +171,17 @@
             var param=data.field;
             var faultName=param.faultName;
             var testType=param.testType;
-            var member=param.member
+            var member=param.member;
+            var date=param.date;
+            var degree=param.degree;
+            var device=param.device;
             sessionStorage.setItem("faultName",faultName);
             sessionStorage.setItem("testType",testType);
             sessionStorage.setItem("member",member);
-            tableRender(faultName,testType,member);
+            sessionStorage.setItem("date",date);
+            sessionStorage.setItem("degree",degree);
+            sessionStorage.setItem("device",device);
+            tableRender(faultName,testType,member,date,degree,device);
             return false;
         });
 
@@ -194,6 +216,7 @@
                         layer.closeAll('loading');
                         if (res.code == 200) {
                             console.log("1");
+                            firstRender();
                         } else {
                             console.log("2");
                         }
