--- a/src/main/resources/static/show1.html
+++ b/src/main/resources/static/show1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
     <title>show</title>
@@ -7,26 +7,66 @@
     <link rel="stylesheet" href="assets/common.css">
 </head>
 <body>
-<div class="layui-card">
-    <div class="layui-card-header"><i class="layui-icon layui-icon-add-circle"></i>读取数据</div>
-    <div class="margin-left">
-        <span>通道</span>
-        <select name="channel"  lay-verify="" id="selectBox">
-        </select>
-        <span></span>
-        <select name="domain"  lay-verify="" id="selectDomain" onchange="domainChange()">
-            <option>timeDomain</option>
-            <option>frequentDomain</option>
-        </select>
+<div class="layui-container" style="margin-top:30px">
+    <div class="layui-row">
+        <div class="layui-col-md6">
+            <div class="layui-card">
+                <div class="layui-card-header"><i class="layui-icon layui-icon-add-circle"></i>读取数据</div>
+                <div class="margin-left" style="margin-top:10px">
+                    <span>通道</span>
+                    <select name="channel"  lay-verify="" id="selectBox">
+                    </select>
+                    <span>类型</span>
+                    <select name="domain"  lay-verify="" id="selectDomain">
+                        <option>timeDomain</option>
+                        <option>frequentDomain</option>
+                    </select>
+                    <select name="vaule"  lay-verify="" id="value">
+                        <option>采样率</option>
+                        <option>有效值</option>
+                        <option>峰值</option>
+                        <option>方差</option>
+                    </select>
+                    <span id="interval"></span>
+                </div>
+
+                <div class="layui-card-body">
+                    <div id="echarts-records" style="width: 100%;min-height:500px"></div>
+                </div>
+            </div>
+        </div>
+        <div class="layui-col-md6">
+            <div class="layui-card layui-row">
+                <div class="layui-card-header"><i class="layui-icon layui-icon-add-circle"></i>读取数据</div>
+                <div class="margin-left" style="margin-top:10px">
+                    <span>通道</span>
+                    <select name="channel"  lay-verify="" id="selectBox2">
+                    </select>
+                    <span>类型</span>
+                    <select name="domain"  lay-verify="" id="selectDomain2">
+                        <option>timeDomain</option>
+                        <option>frequentDomain</option>
+                    </select>
+                    <select name="vaule"  lay-verify="" id="value2">
+                        <option>采样率</option>
+                        <option>有效值</option>
+                        <option>峰值</option>
+                        <option>方差</option>
+                    </select>
+                    <span id="interval2"></span>
+                </div>
+
+                <div class="layui-card-body">
+                    <div id="echarts-records2" style="width: 100%;min-height:500px"></div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="layui-card-body">
-        <div id="echarts-records" style="width: 100%;min-height:500px"></div>
-    </div>
-</div>
+
 <script type="text/javascript" src="assets/layui/layui.js"></script>
 <script type="text/javascript" src="assets/layui/lay-config.js"></script>
 <script type="text/javascript" src="assets/config.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script type="text/javascript" src="assets/layui/jquery-3.5.1.min.js"></script>
 <script type="text/javascript" src="assets/layui/jquery.param.js"></script>
 <script>
     layui.use(['jquery', 'layer', 'element','echarts'], function () {
@@ -35,26 +75,57 @@
         var element = layui.element;
         var echarts = layui.echarts;
         var $selectBox=$('#selectBox');
+        var $selectBox2=$('#selectBox2');
         var result;
         var path=$.query.get("path")||"";
+
         /**
          * 报表功能
          */
         getData();
         var echartsRecords = echarts.init(document.getElementById('echarts-records'), 'walden');
+        var echartsRecords2 = echarts.init(document.getElementById('echarts-records2'), 'walden');
         //通道表格数据渲染
        $('#selectBox').change(function () {
-           channel();
+           channel1();
        })
-
+        $('#selectBox2').change(function () {
+            channel2();
+        })
+        //频域时域数据切换
+        $('#selectDomain').change(function () {
+            channel1();
+        })
+        $('#selectDomain2').change(function () {
+            channel2();
+        })
+        //特征值数据切换
+        $('#value').change(function(){
+            let value=$('#value').val();
+            let index=$("#selectBox").val();
+            let id=$("#interval");
+            selectChange(value,index,id);
+        })
+        $('#value2').change(function(){
+            let value=$('#value2').val();
+            let index=$("#selectBox2").val();
+            let id=$("#interval2");
+            selectChange(value,index,id);
+        })
+        function selectChange(value,index,id){
+            switch(value){
+                case "采样率":id.html(result.channelInfos[index-1].dataInterval);break;
+                case "有效值":id.html(result.effectValue[index-1]);break;
+                case "峰值":id.html(result.peak[index-1]);break;
+                case "方差":id.html(result.variance[index-1]);break;
+            }
+        }
         //获取数据
         function getData(){
-
             $.get(baseServer + 'api/show', {
                 path: path
             }, function(res){
                 result=res;
-                console.log(result);
                 layer.closeAll('loading');
                 let str='';
                 if (res.channelNums>0) {
@@ -63,69 +134,98 @@
                         str +=`<option>${i}</option>`
                     };
                     $selectBox.append(str);
-                    channel();
+                    $selectBox2.append(str);
+                    channel1();
+                    channel2();
                  }
             })
         }
-        function channel(){
-                    let dataArr=[];
-                    if($("#selectDomain").val()=='timeDomain'){
-                        let index=$("#selectBox").val();
-                        for(let i=0;i<result.channelInfos[index-1].dataNums;i++){
-                            dataArr.push((result.channelInfos[index-1].dataInterval)*i);
-                        }
-                        var endData=result.channelInfos[index-1].dataNums*result.channelInfos[index-1].dataInterval;
-                        var optionRecords = {
-                            title: {
-                                text: path,
-                                subtext: '模拟数据',
-                                x: 'center'
-                            },
+        function channel1(){
+            let val=$("#selectDomain").val();
+            let index=$("#selectBox").val();
+            let optionRecords1=channel(val,index);
+            echartsRecords.setOption(optionRecords1);
+        }
+        function channel2(){
+           let val=$("#selectDomain2").val();
+           let index=$("#selectBox2").val();
+           let optionRecords2=channel(val,index)
+           echartsRecords2.setOption(optionRecords2);
 
-                            legend: {
-                                data: path
-                            },
-                            grid: {
-                                left: '3%',
-                                right: '4%',
-                                bottom: '3%',
-                                containLabel: true
-                            },
-                            toolbox: {
-                                feature: {
-                                    saveAsImage: {}
-                                }
-                            },
-                            xAxis: {
-                                type: 'category',
-                                boundaryGap: false,
-                                data: dataArr
-                            },
-                            yAxis: {
-                                type: 'value'
-                            },
-                            dataZoom:[{
-                                　　type: 'slider',//图表下方的伸缩条
-                                    show : true, //是否显示
-                             　　　　realtime : true, //拖动时，是否实时更新系列的视图
-                             　　　　start : 0, //伸缩条开始位置（1-100），可以随时更改
-                             　　　　end : endData, //伸缩条结束位置（1-100），可以随时更改
-                             　　　}],
-                            series: [
-                                {
-                                    name: '通道',
-                                    type: 'line',
-                                    data:  result.timeDomain[index-1],
-                                },
-                            ]
-                        };
+        }
+        function channel(val,index){
+            let xarr=[],yarr=[],length;
+            if(val=='timeDomain'){
+                //时域
+                //计算横轴
+                for(let i=0;i<result.channelInfos[index-1].dataNums;i++){
+                    xarr.push(i);
+                }
+                $("#interval").html(result.channelInfos[index-1].dataInterval);
+                $("#interval2").html(result.channelInfos[index-1].dataInterval);
+                //length为横轴最大值
+                length=result.channelInfos[index-1].dataNums*result.channelInfos[index-1].dataInterval;
+                yarr=result.timeDomain[index-1];
+            }else if(val=='frequentDomain'){
+                //频域
+                let freArr=result.frequencyDomain[index-1];
+                let length=freArr.length;
+                for(let i=0;i<length;i++){
+                    xarr.push(Number(freArr[i]["re"]));
+                    yarr.push(Number(freArr[i]["im"]));
+                }
+
+            }
+             var optionRecords = {
+                title: {
+                    text: path,
+                    subtext:'图示',
+                    x: 'center'
+                },
+                legend: {
+                    data: val
+                },
+                grid: {
+                    left: '3%',
+                    right: '4%',
+                    bottom: '3%',
+                    containLabel: true
+                },
+                toolbox: {
+                    feature: {
+                        saveAsImage: {}
                     }
-                    echartsRecords.setOption(optionRecords);
+                },
+                xAxis: {
+                    type: 'category',
+                    boundaryGap: false,
+                    data: xarr,
+                },
+                yAxis: {
+                    type: 'value'
+                },
+                dataZoom:[{
+                    type: 'slider',//图表下方的伸缩条
+                    show : true, //是否显示
+                    realtime : true, //拖动时，是否实时更新系列的视图
+                    start : 0, //伸缩条开始位置（1-100），可以随时更改
+                    end : length, //伸缩条结束位置（1-100），可以随时更改
+                }],
+                series: [
+                    {
+                        name: '通道',
+                        type: 'line',
+                        data:  yarr,
+                    },
+                ]
+            };
+            return optionRecords;
 
         }
         // echarts 窗口缩放自适应
         window.onresize = function(){
             echartsRecords.resize();
+            echartsRecords2.resize();
         }
     });
 </script>
